fixing dark mode

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -27,11 +27,11 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-  --background: #f4f4f4;
+  --background: #282828;
   --foreground: #F1F1F1;
   --offWhite: #1A1D24;
   --offBlack: #E8E8E8;
-  --primary: #EDE8D0;
+  --primary: #314D82;
   --secondary: #f4f4f4;
   }
 }
